# beever-atlas

./: .env.example  .gitignore  .mcp.json  Dockerfile  HANDOFF.md  Makefile  README.md  atlas  docker-compose.auth.yml  docker-compose.yml  glama.json  llms-install.md  pyproject.toml  server.json
.github/codeql/: config.yml
.github/workflows/: audit.yml  codeql.yml  quickstart-verify.yml  regenerate-demo-fixtures.yml  release.yml
bot/: README.md  package-lock.json  package.json
bot/src/: bridge.caches.test.ts  bridge.teams-persistence.test.ts  bridge.ts  bridge.workspace-domain.test.ts  chat-manager.test.ts  chat-manager.ts  discord-gateway.test.ts  discord-gateway.ts  index.test.ts  index.ts  integration.test.ts  mentions.test.ts  mentions.ts  participant-cache.test.ts  participant-cache.ts  rate-limiter.test.ts  rate-limiter.ts  renderer.test.ts  renderer.ts  reply-metrics.test.ts  reply-metrics.ts  session-id.test.ts  session-id.ts  sse-client.test.ts  sse-client.ts  thread-id.test.ts  thread-id.ts  trigger.test.ts  trigger.ts  types.ts  vision.test.ts
bot/teams-app/: build-package.mjs  manifest.json
demo/: README.md  docker-compose.demo.yml  docker-compose.regen.yml  seed.py
demo/fixtures/: README.md  manifest.json  neo4j_graph.cypher  weaviate_facts.jsonl  wiki_seed.json
deploy/launchd/: ai.beever.tunnel.plist.template
docs/: mcp-server.md  media-persistence.md
docs/architecture/: oss-pipeline.md
docs/content/getting-started/: teams-setup.mdx
docs/guides/: hackathon-builder-guide.md  reboot-proof-tunnel.md  slack-setup.md
docs/runbooks/: wiki-maintenance-soak.md  wiki-narrative-articles-rollout.md
runbooks/: channel-reset.md
scripts/: migrate_wiki_pages_to_slug_identity.py  set_slack_socket_mode.py  smoke_reply.py  smoke_test_media_persistence.sh  tunnel_up.py
src/beever_atlas/adapters/: base.py  bridge.py
src/beever_atlas/agents/: resilient_tool_resolver.py  runner.py
src/beever_atlas/api/: admin.py  ask.py  channels.py  config.py  connections.py  graph.py  imports.py  loaders.py  media.py  sources.py  wiki.py
src/beever_atlas/capabilities/: graph.py  memory.py  proactive.py
src/beever_atlas/infra/: config.py  http_safe.py  platform_hosts.py
src/beever_atlas/llm/: provider.py
src/beever_atlas/models/: domain.py  persistence.py  platform_connection.py
src/beever_atlas/scripts/: backfill_channel_media.py  migrate_imported_messages_to_channel_messages.py
src/beever_atlas/server/: app.py
src/beever_atlas/services/: batch_pipeline.py  batch_processor.py  channel_deletion.py  circuit_breaker.py  coreference_resolver.py  extraction_worker.py  llm_dispatch.py  media_backfill.py  media_processor.py  orphan_reconciler.py  push_hmac.py  reconciler.py  scheduler.py  sync_runner.py  unresolved_classifier.py  wiki_auto_builder.py  wiki_drift_comparator.py  wiki_maintainer.py
tests/: test_ask_dedup.py  test_ask_endpoint.py  test_atomic_fact_deterministic_id.py  test_atomic_fact_null_coercion.py  test_blob_backend.py  test_bot_polish_dedup.py  test_channel_deletion_media.py  test_channel_isolation_and_memory.py  test_config.py  test_connection_credentials_update.py  test_graph_protocol.py  test_loaders_stored_media.py  test_media_backfill.py  test_media_blob_store.py  test_media_blob_store_minio_live.py  test_media_processor_persist.py  test_meta_recall_empty_state.py  test_minio_backend.py  test_neo4j_hops.py  test_persister_heuristic.py  test_platform_store.py  test_proactive.py  test_qa_chat_overhaul.py  test_setup_script.sh  test_sync_runner.py  test_true_hybrid_search.py
tests/agents/: test_fact_extractor_narration_prompt.py  test_follow_ups.py  test_narration_filter.py  test_onboarding_length.py  test_prompt_redesign.py  test_resilient_tool_resolver.py
tests/api/: test_admin_channel_reset.py  test_admin_sources.py  test_admin_wiki_graph.py  test_ask_disabled_tools.py  test_ask_internal_media.py  test_channel_extraction_failures.py  test_channel_extraction_status.py  test_file_imports_dual_read.py  test_files_proxy_ssrf.py  test_mcp_resources_prompts.py  test_mcp_standalone.py  test_mcp_tools_registry.py  test_mcp_tools_retrieval.py  test_mcp_wiki_retrieval.py  test_proxy_media_ssrf.py  test_push_source_events.py  test_wiki_curation.py  test_wiki_maintain_endpoint.py  test_wiki_refresh_modes.py  test_workspace_domain_resolve.py
tests/infra/: test_platform_hosts.py  test_principal_auth.py
tests/integration/: test_mcp_e2e_handshake.py  test_relationship_stub_merge.py
tests/llm/: test_provider_failover_seam.py
tests/models/: test_atomic_fact_phase3.py
tests/scripts/: test_migrate_imported_messages.py  test_migrate_wiki_pages_to_slug_identity.py
tests/services/: test_batch_processor.py  test_circuit_breaker.py  test_llm_dispatch_streaming.py  test_provider_outage_breaker.py  test_push_hmac.py  test_wiki_cross_links.py  test_wiki_drift_persist.py  test_wiki_maintainer.py  test_wiki_maintainer_entity_edges.py  test_wiki_synthesis_prompts.py
tests/stores/: test_channel_messages_store.py  test_neo4j_store_heal_path.py
tests/wiki/: test_acronym_legend.py  test_body_empty_section_strip.py  test_body_mermaid_suppression.py  test_children_toc.py  test_cross_cutting_decisions.py  test_decision_banner.py  test_fallback_folder_output.py  test_folder_modules_inference.py  test_folder_rollup_phantom_facts.py  test_hero_summary_module.py  test_key_facts_module_v2.py  test_large_cluster_modular_routing.py  test_media_kind_derivation.py  test_modular_default_routing.py  test_module_compile_prompt_v3.py  test_modules_catalog.py  test_modules_e2e.py  test_modules_orchestrator.py  test_modules_planner.py  test_modules_renderers.py  test_modules_substitution.py  test_narrative_fallback.py  test_narrative_validator.py  test_orchestrator_suppression.py  test_overview_splicers.py  test_page_store.py  test_related_topics_reason.py  test_section_numbering.py  test_stat_strip.py  test_tension_callout.py  test_tension_detector.py  test_text_utils.py  test_top_contributors.py
web/: Dockerfile  package-lock.json  package.json
web/src/: App.tsx
(+168 files in other folders)
