[project]
name = "beever-atlas"
version = "0.3.0"
description = "Wiki-first RAG system with dual semantic + graph memory"
readme = { text = "", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "google-adk>=2.1.0,<3",
    "litellm>=1.75.5",
    "weaviate-client>=4.10.0",
    "neo4j>=5.26.0",
    "pymongo>=4.10.0",
    "motor>=3.6.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
    "pypdf>=6.13.3",
    "python-docx>=1.1.0",
    "cryptography>=42.0.0",
    "authlib>=1.7.1",
    "jellyfish>=1.0.0",
    "apscheduler>=4.0.0a5",
    "croniter>=1.3.0",
    "fastmcp>=3.2.2",
    "chardet>=5.2.0",
    "python-dateutil>=2.9.0",
    "langdetect>=1.0.9",
    "tavily-python>=0.5.0",
    "slowapi>=0.1.9",
    "aiolimiter>=1.1.0",
    "python-multipart>=0.0.27,<1.0.0",
    # S3-compatible byte backend for channel media (MinIO locally, AWS S3 for
    # EE). aioboto3 transitively pins aiobotocore + a compatible botocore;
    # do NOT also add boto3 or the sync minio SDK — aiobotocore pins a narrow
    # botocore range and a stray boto3 can break it at import.
    "aioboto3>=15.5.0",
]

[project.optional-dependencies]
nebula = [
    "nebula3-python>=3.4.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "hypothesis>=6.100.0",
    "markdown-it-py>=3.0.0",
    "pyright>=1.1.395",
    # Offline S3 mock for MinioBackend unit tests (no live MinIO needed).
    "moto[s3]>=5.0.0",
]
test = [
    "tiktoken>=0.7",
]

[project.scripts]
# Standalone stdio MCP server (no HTTP, no backing stores) — used by MCP
# registries (Glama) and local launchers; see api/mcp_server/__main__.py.
beever-atlas-mcp = "beever_atlas.api.mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beever_atlas"]

[tool.uv]
# Security pins on transitive deps — applied via ``constraint-dependencies``
# so they take effect without adding a direct runtime import.
#
# - Mako <1.3.12: path-traversal in TemplateLookup.get_template() via
#   double-slash URI prefix (CVE-2026-44307). Mako reaches us via
#   alembic.
# - python-multipart was bumped to >=0.0.27 directly in [project] above
#   for CVE-2026-42561.
# - aiohttp <3.14.0: two HIGH advisories (CVE-2026-34993, CVE-2026-47265).
#   aiohttp reaches us transitively (e.g. via litellm); pin so the resolver
#   takes the patched line without adding a direct runtime import.
constraint-dependencies = [
    "mako>=1.3.12",
    "aiohttp>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "dist", "build"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportPrivateImportUsage = "none"
reportOptionalMemberAccess = "none"
reportGeneralTypeIssues = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportOptionalSubscript = "warning"
reportAttributeAccessIssue = "warning"
reportReturnType = "warning"
reportAssignmentType = "warning"
reportOperatorIssue = "warning"
reportIndexIssue = "warning"
reportAbstractUsage = "warning"
# Tests + parts of the LLM source intentionally subscript TypedDicts
# declared with ``total=False`` (e.g. ModelSpec entries from the catalog).
# At runtime every catalog entry is constructed with the asserted keys
# present — see ``llm/known_models.py``. Pyright's default ERROR here is
# a false positive against our pattern; downgrade to WARNING so CI's
# Pyright gate doesn't block on a known-correct access.
reportTypedDictNotRequiredAccess = "warning"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.coverage.run]
source = ["src/beever_atlas"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
fail_under = 52
show_missing = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Re-export modules intentionally forward public API from submodules.
"src/beever_atlas/agents/consolidation/__init__.py" = ["F401"]
"src/beever_atlas/agents/media/__init__.py" = ["F401"]
"src/beever_atlas/llm/__init__.py" = ["F401"]
"src/beever_atlas/models/__init__.py" = ["F401", "F403"]
# Conditional imports gated on runtime env/feature flags; E402 is intentional.
"src/beever_atlas/server/app.py" = ["E402"]
"src/beever_atlas/stores/neo4j_store.py" = ["E402"]
"src/beever_atlas/api/channels.py" = ["E402"]
